--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Welcome to my webpage</h1>
-    Hello world.
+    <h2>This is my second heading</h2>
+    Hello world!
     
 </body>
 </html>
