--- a/hello.html
+++ b/hello.html
@@ -8,14 +8,17 @@
     
     <style>
         h1{
-            color: brown;
+            color: green;
+        }
+        h2{
+            color: gray;
         }
     </style>
 </head>
 <body>
     <h1>Welcome to my webpage</h1>
     <h2>This is my second heading</h2>
-    Hello world!
+     Hello world!
     
 </body>
 </html>
